--- a/templates/Frases.html
+++ b/templates/Frases.html
@@ -17,11 +17,11 @@
             <a class="list-group-item list-group-item-action active" style="font-size: 2em; text-align: center; text-transform: uppercase; "> <b>FRASES DO ANIME {{ nome }}</b>  </a>
             {% for i in range(qtd) %}
                 <a class="list-group-item list-group-item-action"><i>{{ frases[i]['character'] }} -> {{ frases[i]['quote'] }}</i></a>
-                <a hidden class="list-group-item list-group-item-action" id="fb {{ i }}"><i>{{ frases[i]['character'] }} -> {{ frases[i]['quote'] }}</i></a>
+                <a hidden class="list-group-item list-group-item-action" id="fb {{ i }}"><i>{{ frases[i]['character'] }} -> {{ frasesBR[i]['result'] }}</i></a>
                 <div class="row">
-                    <div class="col-md-6" ><a  style="width: 100%" class="btn btn-primary" href="#" >Traduzir</a></div>
-                    <div class="col-md-6" ><a onclick="exibir({{ i }})" style="width: 100%" class="btn btn-primary" href="#">Ouvir Frase em EN</a></div>
-                    <div hidden class="col-md-6" ><a  style="width: 100%" class="btn btn-primary" href="#">Ouvir Frase em PT</a></div>
+                    <div class="col-md-6" ><a onclick="exibir({{ i }})" id="Traduzir {{ i }}" style="width: 100%" class="btn btn-primary" href="#" >Traduzir</a></div>
+                    <div class="col-md-6" ><a onclick="window.open(this.href,'EN','resizable,height=260,width=370'); return false;" style="width: 94.8% ; position:absolute" id="OuvirEN {{ i }}" class="btn btn-primary" href="https://translate.google.com.vn/translate_tts?ie=UTF-8&q={{ frases[i]['quote'] }}&tl=en&client=tw-ob">Ouvir Frase em EN</a></div>
+                    <div class="col-md-6" ><a onClick="window.open(this.href,'BR','resizable,height=260,width=370'); return false;" style="width: 100%; display: none" id="OuvirPT {{ i }}"class="btn btn-primary" href="https://translate.google.com.vn/translate_tts?ie=UTF-8&q={{ frasesBR[i]['result'] }}&tl=pt&client=tw-ob" >Ouvir Frase em PT</a></div>
                 </div>
             {% endfor %}
           </div>
@@ -39,11 +39,11 @@
       function exibir(i){
           var fraseBR = document.getElementById("fb " + i);
           fraseBR.hidden = false;
-      }
-
-      function traduzir(frase){
-          frasesBR =   {{ traduzir2('red') }}
-          console.log(frasesBR);
+          var botaoTraduzir =  document.getElementById("Traduzir " + i);
+          botaoTraduzir.hidden = true;
+           var botaoOuvir =  document.getElementById("OuvirPT " + i);
+          console.log(botaoOuvir);
+          botaoOuvir.style.display = "block";
       }
 
   </script>
