--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
                             <h2 class="text-center text-info" style="color: #962320 !important;">LOGIN</h2>
                             <div class="form-group">
                                 <label for="username" class="text-info" style="color: #962320 !important;" >Username:</label><br>
-                                <input type="text" name="username" id="username" class="form-control">
+                                <input type="text" style="text-transform: uppercase" name="username" id="username" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label for="password" class="text-info" style="color: #962320 !important;">Password:</label><br>
